Updated index.html for fresh deployment

--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
         let cubes = [];
 
         const messages = [
-    { video: 'https://github.com/youkay710/prac0/raw/main/video.mp4', image: 'https://threejs.org/examples/textures/uv_grid_opengl.jpg' },
-    { video: 'https://github.com/youkay710/prac0/raw/main/video2.mp4', image: './bts.jpg' }
+    { video: 'https://cors-anywhere.herokuapp.com/https://github.com/youkay710/prac0/raw/main/video1.mp4', image: 'https://threejs.org/examples/textures/uv_grid_opengl.jpg' },
+    { video: 'https://cors-anywhere.herokuapp.com/https://github.com/youkay710/prac0/raw/main/video2.mp4', image: './bts.jpg' }
 ];
+
 
         let currentMessageIndex = 0;
 
